--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		<link rel="icon" type="image/png" href="icon.jpg">
-		<link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css">
-		<link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"> 
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/templatemo-style.css">
 		<!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
@@ -510,8 +510,8 @@
 		<!-- end contact -->
 
 		<!-- start javascript -->
-		<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-		<script src="http://www.jq22.com/jquery/bootstrap-3.3.4.js"></script>
+		<script src="js/jquery.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script src="js/jquery.simple-text-rotator.js"></script>
 		<script src="js/smoothscroll.js"></script>
 		<script src="js/wow.min.js"></script>
