--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		<link rel="icon" type="image/png" href="icon.jpg">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"> 
+		<link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css">
+		<link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/templatemo-style.css">
 		<!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
@@ -19,6 +19,7 @@
 	.nav > li{
 		margin:0 20px; 
 	}
+	#allmap {width: 100%;height:400px;overflow: hidden;margin:0;font-family:"微软雅黑";}
 
 	</style>
 
@@ -111,7 +112,7 @@
 						<p>包头市嘉美装饰有限公司成立于2013年，经营范围：<span class="blue">房建总承包施工</span>、钢结构专业承包、结构加固专业承包、市政公用工程施工总承包、建材销售等。经4年的发展历程，负重拼搏、艰苦创业、不懈努力，以超常的速度不断发展。 公司本着“<span class="green">诚信、规范、创新、卓越</span>”的宗旨，树立了良好的企业形象和社会信誉。公司为开拓广阔的建筑市场，赢得广大用户的支持和信任。凭借着自身良好的信誉保障，本着精干、高效的原则，运用现代化的手段，相继独立完成了多个房屋建筑工程；钢结构建筑工程；建筑结构加固改造工程和市政工程，无一被客户投诉，取得了很高的知名度与满意度。</p>
 					</div>
 					<div class="col-sm-6 col-md-5 wow fadeInRight" data-wow-delay="2000">
-						<h3>产品介绍</h3>
+						<h3>资质介绍</h3>
 						<div class="col-md-6 col-sm-6 col-xs-6">
 							<img src="images/company-img-1.jpg" class="img-responsive" alt="company 1">
 						</div>
@@ -125,17 +126,12 @@
 							<img src="images/company-img-4.jpg" class="img-responsive" alt="company 4">
 						</div>
 							<div class="col-md-6 col-sm-6 col-xs-6">
-							<img src="images/company-img-1.jpg" class="img-responsive" alt="company 1">
+							<img src="images/company-img-5.jpg" class="img-responsive" alt="company 1">
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6">
-							<img src="images/company-img-2.jpg" class="img-responsive" alt="company 2">
+							<img src="images/company-img-6.jpg" class="img-responsive" alt="company 2">
 						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<img src="images/company-img-3.jpg" class="img-responsive" alt="company 3">
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6">
-							<img src="images/company-img-4.jpg" class="img-responsive" alt="company 4">
-						</div>
+						
 
 					</div>
 				</div>
@@ -151,12 +147,12 @@
 					</div>
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<p>团队信息团队信息团队信息团队信息团队信息</p>
+						<p>项目管理团队特点鲜明，并秉承公司管理求细、质量求真的管理方针，对酒店公装类项目、写字楼办公室精装改造类项目，商业、住宅精装等项目具有多年实践经验，注重稳扎稳打，每个项目实战经验丰富，各项目强化落实项目安全、质量、进度、成本等管理</p>
 					</div>
 					<div class="col-md-2"></div>
 					<div class="col-sm-6 col-md-3 wow fadeInLet" data-wow-delay="2000">
 						<div class="team_thumb">
-							<img src="images/team-img-1.jpg" class="img-responsive" alt="team">
+							<img src="images/team-img-1.png"style="width:220px;height:220px" class="img-responsive" alt="team">
 								<div class="team_overlay">
 									<!-- <ul class="social_icon">
 																	<li><a href="#" class="fa fa-facebook"></a></li>
@@ -188,7 +184,7 @@
 					</div>
 					<div class="col-sm-6 col-md-3 wow fadeInUp" data-wow-delay="2000">
 						<div class="team_thumb">
-							<img src="images/team-img-3.jpg" class="img-responsive" alt="team">
+							<img src="images/team-img-3.jpg"style="width:220px;height:220px" class="img-responsive"style="width:220px;height:220px" alt="team">
 								 <div class="team_overlay">
 									<!--<ul class="social_icon">
 										<li><a href="#" class="fa fa-facebook"></a></li>
@@ -199,12 +195,12 @@
 						</div>
 						<div class="team_description">
 							<h4>李龙</h4>
-							<h5>爸爸</h5>
+							<h5>监制</h5>
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-3 wow fadeInRight" data-wow-delay="2000">
 						<div class="team_thumb">
-							<img src="images/team-img-4.jpg" class="img-responsive" alt="team">
+							<img src="images/team-img-4.png" style="width:220px;height:220px" class="img-responsive" alt="team">
 								 <div class="team_overlay">
 									<!--<ul class="social_icon">
 										<li><a href="#" class="fa fa-facebook"></a></li>
@@ -214,8 +210,8 @@
 								</div> 
 						</div>
 						<div class="team_description">
-							<h4>毛傻傻</h4>
-							<h5>女儿</h5>
+							<h4>梁美云</h4>
+							<h5>设计</h5>
 						</div>
 					</div>
 							
@@ -455,68 +451,93 @@
 		</section>
 		end pricing -->
 		<!-- start contact -->
-		<!-- <section id="contact" class="text-center">
-			<div class="container">
-				<div class="row">
+	<section id="contact" class="text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 wow fadeInDown" data-wow-delay="2000">
+					<h3>咨询信息</h3>
+				</div>
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<p>如需留言咨询，请填写下面信息</p>
+				</div>
+				<div class="col-md-2"></div>
+				<form action="#" method="post">
+					<div class="col-md-4 wow fadeInLeft" data-wow-delay="2000">
+						<input type="text" placeholder="姓名" class="form-control">
+					</div>
+					<div class="col-md-4 wow fadeInDown" data-wow-delay="2000">
+						<input type="tel" placeholder="联系电话" class="form-control" id="iphone" required>
+					</div>
+					<div class="col-md-4 wow fadeInRight" data-wow-delay="2000">
+						<input type="text" placeholder="咨询项目" class="form-control">
+					</div>
 					<div class="col-md-12 wow fadeInDown" data-wow-delay="2000">
-						<h3>CONTACT CRYSTAL</h3>
+						<textarea placeholder="具体信息" class="form-control"></textarea>
 					</div>
-					<div class="col-md-2"></div>
-					<div class="col-md-8">
-						<p>Mauris mattis vitae libero eget iaculis. Donec et augue quis quam porttitor consectetur ut nec sem. Integer sagittis viverra quam quis ultricies. Aenean risus nisl, consequat at nunc id, tincidunt tristique mauris.</p>
+					<div class="col-md-3"></div>
+					<div class="col-md-6 wow fadeInUp" data-wow-delay="2000">
+						<input type="submit" value="提 交 信 息" class="form-control" onclick="msg()">
 					</div>
-					<div class="col-md-2"></div>
-					<form action="#" method="post">
-						<div class="col-md-4 wow fadeInLeft" data-wow-delay="2000">
-							<input type="text" placeholder="Name" class="form-control">
-						</div>
-						<div class="col-md-4 wow fadeInDown" data-wow-delay="2000">
-							<input type="email" placeholder="Email" class="form-control" required>
-						</div>
-						<div class="col-md-4 wow fadeInRight" data-wow-delay="2000">
-							<input type="text" placeholder="Subject" class="form-control">
-						</div>
-						<div class="col-md-12 wow fadeInDown" data-wow-delay="2000">
-							<textarea placeholder="Message" class="form-control"></textarea>
-						</div>
-						<div class="col-md-3"></div>
-						<div class="col-md-6 wow fadeInUp" data-wow-delay="2000">
-							<input type="submit" value="SHOOT MESSAGE" class="form-control">
-						</div>
-						<div class="col-md-3"></div>
-					</form>
-				</div>
+					<div class="col-md-3"></div>
+				</form>
 			</div>
-			<div class="google_map">
-				<div id="map-canvas"></div>
+		</div>
+		<section id="team" class="text-center">
+			<div id="allmap"></div>
+		</section>
+		<footer class="container">
+			<div class="col-md-12 wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="0.4s">
+				<span>
+	                    	Copyright &copy; 2015 嘉美装饰
+	                    </span>
+				<ul class="social_icon">
+			    <li><a href="#" class="fa fa-facebook"></a></li>
+					<li><a href="#" class="fa fa-twitter"></a></li>
+					<li><a href="#" class="fa fa-instagram"></a></li>
+					<li><a href="#" class="fa fa-apple"></a></li>
+					<li><a href="#" class="fa fa-pinterest"></a></li>
+					<li><a href="#" class="fa fa-google"></a></li>
+					<li><a href="#" class="fa fa-wordpress"></a></li>
+				</ul>
 			</div>
-			<footer class="container">
-				<div class="col-md-12 wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="0.4s">
-					<span>
-		                    	Copyright &copy; 2015 Your Company Name
-		                    </span>
-					<ul class="social_icon">
-				    <li><a href="#" class="fa fa-facebook"></a></li>
-						<li><a href="#" class="fa fa-twitter"></a></li>
-						<li><a href="#" class="fa fa-instagram"></a></li>
-						<li><a href="#" class="fa fa-apple"></a></li>
-						<li><a href="#" class="fa fa-pinterest"></a></li>
-						<li><a href="#" class="fa fa-google"></a></li>
-						<li><a href="#" class="fa fa-wordpress"></a></li>
-					</ul>
-				</div>
-			</footer>
-		</section> -->
+		</footer>
+	</section>
 		<!-- end contact -->
 
 		<!-- start javascript -->
-		<script src="js/jquery.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+		<script src="http://www.jq22.com/jquery/bootstrap-3.3.4.js"></script>
 		<script src="js/jquery.simple-text-rotator.js"></script>
 		<script src="js/smoothscroll.js"></script>
 		<script src="js/wow.min.js"></script>
 		<script src="js/jquery.flexslider.js"></script>
 		<script src="js/templatemo-script.js"></script>
+		 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3HudaAogbQAYpdbfZ6o0bBHD"></script>
 		<!-- end javascript -->
+		
 	</body>	
+	<script>
+
+// 百度地图API功能
+    var map = new BMap.Map("allmap");    // 创建Map实例
+    map.centerAndZoom(new BMap.Point(109.85902550005438,40.68916353559561), 17);  // 初始化地图,设置中心点坐标和地图级别
+    map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
+    var marker = new BMap.Marker(new BMap.Point(109.85902550005438,40.68916353559561)); // 创建点
+    map.addOverlay(marker);//增加点
+    marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
+    map.addOverlay(marker);              // 将标注添加到地图中
+	var label = new BMap.Label("包头市嘉美装饰",{offset:new BMap.Size(20,1)});
+	marker.setLabel(label);
+    map.setCurrentCity("包头");          // 设置地图显示的城市 此项是必须设置的
+    map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
+    function msg(){
+    	//alert($("#iphone").val())
+    	if($("#iphone").val()!=""){
+    		alert("发送成功，我们尽快与您联系！");
+    	}else{
+    		alert("请填写电话号码！");
+    	}
+    }
+    </script>
 </html>
